# aetherlink

./: .gitattributes  AetherLink.toml  Cargo.toml  README.md  install.bat
.github/workflows/: ci.yml  release.yml
src/: cli_add.rs  hook.rs  install_hook.rs  main.rs  notify.rs  register.rs  security.rs  status.rs  tray.rs
src/graph/: mod.rs
src/mcp/: lease.rs  mod.rs  server.rs
src/rules/: baseline.rs  config.rs  edit.rs  mod.rs  validator.rs
src/scanner/: file_scanner.rs  import_parser.rs  mod.rs
